# main.py
@@ -1,14 +1,16 @@
-import re
 import connexion
+from flask import request
+from Src.Core.convert_factory import convert_factory
 from Src.Core.format_reporting import format_reporting
+from Src.Logics.filter_service import filter_service
 from Src.Reports import report_factory
 from Src.Core.validator import operation_exception, validator
 from Src.data_reposity import data_reposity
 from Src.settings_manager import settings_manager
 from Src.start_service import start_service
 from Src.Reports.report_factory import report_factory
-
-
+from Src.Dto.filter import filter
+from Src.Core.condition_type import condition_type
 
 app = connexion.FlaskApp(__name__)
 
@@ -17,26 +19,30 @@ start = start_service(reposity)
 start.create()
 
 manager = settings_manager()
-manager.open("settings.json")
+manager.open("../settings.json")
 factory = report_factory(manager.settings)
 
 """
 Получить список форматов отчетов
 """
-@app.route("/api/reports/formats", methods=['GET'])
+@app.route("/api/dictionary/formats", methods=['GET'])
 def formats():
     return format_reporting.list()
 
 """
 Получить список сущностей
 """
-@app.route("/api/reports/entities", methods=['GET'])
+@app.route("/api/dictionary/entities", methods=['GET'])
 def entities():
     return data_reposity.keys()
 
+@app.route("/app/dictionary/conditions", methods=["GET"])
+def conditions():
+    return condition_type.list()
+    
 
 """
-Получить отчет по списоку единиц измерения
+Получить отчет
 Источник: https://github.com/Danila-Ivashchenko
 """
 @app.route("/app/reports/<entity>/<format>", methods=["GET"])
@@ -58,12 +64,41 @@ def get_report(entity:str, format:int):
     if len(reposity.data) == 0:
         raise operation_exception("Набор данных пуст!")
 
-    result = report.create(reposity.data[ entity ])
-    if result == False:
-        raise operation_exception(report.error_text)
-    
+    report.create(reposity.data[ entity ])
     return report.result
     
+"""
+Получить отчет с учетом фильтрации
+"""    
+@app.route("/app/reports/<entity>", methods=["POST"])
+def get_filtered_report(entity:str):
+    validator.validate(entity, str)
+    if entity not in data_reposity.keys():
+        raise operation_exception("Некорректно указан тип данных! См метод /api/report/entities")
+    
+    # Получим Dto фильтра
+    data = request.get_json()
+    convert = convert_factory()
+    filterDto = filter()
+    convert.deserialize(data, filterDto)
+    if len(filterDto.items) == 0:
+        raise operation_exception(f"Ошибка при обработке данных! Некорректно передан фильтр.")
+    
+    # Отфильтруем данные
+    source_data = reposity.data[ entity ]
+    service = filter_service()
+    data = service.filter(source_data, filterDto)
+    if len(data) == 0:
+        return None
+
+    # Сформируем ответ
+    report = factory.create_default()
+    if report is None:
+        raise operation_exception("Невозможно подобрать корректный отчет согласно параметрам!")
+
+    report.create(data)
+    return report.result
+
 
 
 if __name__ == '__main__':
