# swagger.yaml
@@ -13,9 +13,17 @@ produces:
   - application/text  
 basePath: "/api"   
 
+tags:
+  - name: Reports
+    description: Набор методов для работы с отчетностью
+  - name: Dictionary
+    description: Справочники  
+
 paths:
-  /reports/formats:
+  /dictionary/formats:
     get:
+      tags:
+        - Dictionary
       summary: Получить список форматов
       operationId: main.formats
       produces:
@@ -30,9 +38,11 @@ paths:
         default:
           description: Неизвестная ошибка      
            
-  /reports/entities:
+  /dictionary/entities:
     get:
-      summary: Получить список типов данных
+      tags:
+        - Dictionary
+      summary: Получить список моделей данных
       operationId: main.entities
       produces:
         - application/json
@@ -46,8 +56,28 @@ paths:
         default:
           description: Неизвестная ошибка     
 
+  /dictionary/conditions:
+    get:
+      tags:
+        - Dictionary
+      summary: Получить список вариантов сравнения для создания фильтров
+      operationId: main.conditions
+      produces:
+        - application/json
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+        500:
+          description: Ошибка на сервере    
+        default:
+          description: Неизвестная ошибка      
+
   /reports/{entity}/{format}:
     get:
+      tags:
+        - Reports
       summary: Получить данные
       operationId: main.get_report
       produces:
@@ -64,20 +94,62 @@ paths:
     parameters:
     - name: entity
       in: path
-      description: Уникальное наименование типа данных (/reports/entities)
+      description: Уникальное наименование модели данных (/dictionary/entities)
       required: true
       type: string
     - name: format
       in: path
-      description: Уникальный код формата (/reports/formats)
+      description: Уникальный код формата (/dictionary/formats)
       required: true
       type: integer
 
-
-
-   
+  /reports/{entity}:
+    post:
+      tags:
+          - Reports
+      summary: Получить данные с применением фильтрации
+      operationId: main.get_filtered_report
+      produces:
+        - application/text
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+        500:
+          description: Ошибка на сервере    
+        default:
+            description: Неизвестная ошибка   
+    parameters:
+    - name: entity
+      in: path
+      description: Уникальное наименование модели данных (/dictionary/entities)
+      required: true
+      type: string
+    - name: data  
+      in: body
+      description: Структура для выполнения фильтрации данных
+      schema:
+        properties:
+          items:
+            $ref: '#/definitions/filter'
+        
            
-                  
+definitions:
+    filter:
+        type: array
+        example: [
+                    {
+                    "field": "name",
+                    "condition": 2,
+                    "value": "м"
+                    },
+                    {
+                    "field": "name",
+                    "condition": 2,
+                    "value": "мука"
+                    }
+                 ]         
 
                   
 
